@@ -1,6 +1,0 @@
-use Test;
-use Date::Utils;
-
-pass "replace me";
-
-done-testing;
