@@ -1,6 +1,13 @@
 Revision history for Date-Utils
 
 {{$NEXT}}
+    - Define subset of Int where { 0 < $_ < 8 } and
+        apply to all args not specically using a Date type
+    - Add tests for invalid dow inputs
+    - Remove redundant t/1-basic.t
+    - Add planned number of tests to each test file
+      + Removed 'done-testing' statements
+    - More doc changes
 
 0.5.5  2024-01-14T07:38:31-06:00
     - README corrections and improvements
